Fix footer spacing on sides

--- a/static/src/app/styles/app.styl
+++ b/static/src/app/styles/app.styl
@@ -161,3 +161,9 @@ body
     border-top 1px solid $grey1
     margin 80px 0 40px 0
     padding 20px 0
+
+.footer-left-column
+    padding-left 0
+
+.footer-right-column
+    padding-right 0
